clusters/production/external-servers/unifi/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unifi-slice
  labels:
    kubernetes.io/service-name: unifi
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "192.168.1.1"
    conditions:
      ready: true
