clusters/production/external-servers/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
