clusters/production/external-servers/unifi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: unifi
          port: 443
          scheme: https
          serversTransport: unifi-insecure-transport
